// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config tests load should load global config 1`] = `
Object {
  "defaults": Object {},
  "plugins": Array [],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "green",
          },
        },
        "banana": Object {
          "properties": Object {
            "color": "yellow",
          },
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
    "vegetable": Object {
      "profiles": Object {
        "artichoke": Object {
          "properties": Object {
            "color": "green",
          },
        },
      },
      "properties": Object {
        "origin": "China",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests load should load project config 1`] = `
Object {
  "defaults": Object {},
  "plugins": Array [],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "green",
          },
        },
        "orange": Object {
          "properties": Object {
            "color": "orange",
          },
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests load should load project user config 1`] = `
Object {
  "defaults": Object {},
  "plugins": Array [],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "red",
          },
        },
        "orange": Object {
          "properties": Object {
            "color": "orange",
          },
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests load should load user config 1`] = `
Object {
  "defaults": Object {},
  "plugins": Array [],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "red",
          },
        },
        "banana": Object {
          "properties": Object {
            "color": "yellow",
          },
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
    "vegetable": Object {
      "profiles": Object {
        "artichoke": Object {
          "properties": Object {
            "color": "green",
          },
        },
      },
      "properties": Object {
        "origin": "Mexico",
      },
    },
  },
  "secure": Array [],
}
`;

exports[`Config tests load should merge multiple config files 1`] = `
Object {
  "defaults": Object {},
  "plugins": Array [],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "red",
          },
        },
        "orange": Object {
          "properties": Object {
            "color": "orange",
          },
        },
      },
      "properties": Object {
        "origin": "California",
      },
    },
    "vegetable": Object {
      "profiles": Object {
        "artichoke": Object {
          "properties": Object {
            "color": "green",
          },
        },
      },
      "properties": Object {
        "origin": "Mexico",
      },
    },
  },
  "secure": Array [],
}
`;
